Improve string to number functions
- Ignore leading and trailing whitespace and tabs around numbers

- Add noerror and default arguments to tblfn-to-number
  (signals error by default)
- Add tblfn-to-number-forced for guaranteed numeric conversion

--- a/README-ja.org
+++ b/README-ja.org
@@ -334,6 +334,7 @@ CSVファイルは構成がまちまちなので、事前の整形に ~tblfn-sli
   - tblfn-number-string-p
   - tblfn-string-to-number
   - tblfn-to-number
+  - tblfn-to-number-forced
 - CSV I/O
   - tblfn-read-csv-file
   - tblfn-write-csv-file
