--- a/README.org
+++ b/README.org
@@ -333,6 +333,7 @@ Additional examples can be found in [[file:example/example.org][example/example.
   - tblfn-number-string-p
   - tblfn-string-to-number
   - tblfn-to-number
+  - tblfn-to-number-forced
 - CSV I/O
   - tblfn-read-csv-file
   - tblfn-write-csv-file
