--- a/README-ja.org
+++ b/README-ja.org
@@ -294,6 +294,8 @@ CSVファイルは構成がまちまちなので、事前の整形に ~tblfn-sli
 - Table Transformation
   - tblfn-update
   - tblfn-make-row-transformer
+  - tblfn-map-fields
+  - tblfn-numberize
 - Multi-Table Operations
   - Row Concatenation
     - tblfn-append-body-rows
@@ -335,6 +337,7 @@ CSVファイルは構成がまちまちなので、事前の整形に ~tblfn-sli
   - tblfn-string-to-number
   - tblfn-to-number
   - tblfn-to-number-forced
+  - tblfn-to-number-if-possible
 - CSV I/O
   - tblfn-read-csv-file
   - tblfn-write-csv-file
