--- a/todo.org
+++ b/todo.org
@@ -4,10 +4,6 @@
 ** TODO ヘッダーに列名以外がある時を考慮するかどうか
 今は多くの関数でtblfn-add-header-rowの第二引数に(tblfn-column-names table)を引き渡している。しかし本来は元のテーブルのヘッダー行を丸丸復元すべきではないか。つまりhlineが使われている場合でかつその前に複数行ある場合はそれを全て復元すべきでは無いか。
 
-** TODO tblfn-data-row-pをリストに限定するかどうか
-本来であればリストに限定すべき。
-しかしTEST:の多くの部分で非リストの行を使っている。
-
 ** TODO calc-evalで実行する式に「引数」を渡す方法を調べる
 ** TODO 日付に対応する
 ** TODO tblfn-add-sum-column
@@ -65,3 +61,7 @@ tblfn-map-field
 ** DONE 全フィールドを可能な限り数値化する関数を追加する
 CLOSED: [2026-01-10 Sat 17:34]
 tblfn-numberize
+** DONE tblfn-data-row-pをリストに限定するかどうか(データ行の定義)
+CLOSED: [2026-01-10 Sat 17:58]
+本来であればリストに限定すべき。
+しかしTEST:の多くの部分で非リストの行を使っているのでそれを全て直さなければならない。
